--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
 -->
 <html>
 	<head>
-		<title>{{ .Title }}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" href="/css/main.css" />
-        <link rel="stylesheet" href="css/style.css">
+		<!-- <link rel="stylesheet" href="/css/main.css" /> -->
+        <link rel="stylesheet" href="/css/style.css">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="js/app.js" type="text/javascript"></script>
+		<title>Jessica Beardsley</title>
 	</head>
 	<body>
 
