finished setting up info

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<!-- <link rel="stylesheet" href="/css/main.css" /> -->
         <link rel="stylesheet" href="/css/style.css">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -45,7 +42,7 @@
 				<div class="bottom">
 
 					<!-- Social Icons -->
-					<div class="icons">
+					<!-- <div class="icons">
 						<div class="">
 							<span><a href="https://github.com/jeska706">Github: /jeska706</a></span>
 							<span class="glyphicon glyphicon-envelope"></span>
@@ -54,7 +51,7 @@
 							<span>Email: https://www.jessicabeardsley@hotmail.com</span>
 							<span class="glyphicon glyphicon-envelope"></span>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
@@ -105,48 +102,45 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Here are some samples of projects I created while attending General Assembly's Web Development Immersive Remote Program</p>
 
 
-              <div class="row">
-                <div class="4u 12u$(mobile)">
-                  <article class="item">
-                    <a href="https://etrendy-app.herokuapp.com/" class="image fit"><img src="https://i.imgur.com/Z5XCOcV.png" /></a>
-                    <header>
-                      <h3>eTrendy</h3>
-                    </header>
-                  </article>
-                </div>
+			              	<div class="row">
+				                <div class="4u 12u$(mobile)">
+					                  <article class="item">
+						                    <a href="https://etrendy-app.herokuapp.com/" class="image fit"><img src="images/etrendy.jpg" /></a>
+						                    <header>
+						                      	<h3>eTrendy</h3>
+						                    </header>
+					                  </article>
+				                </div>
 
-                <div class="4u 12u$(mobile)">
-                  <article class="item">
-                    <a href="https://bakedjes.herokuapp.com/" class="image fit"><img src="https://i.imgur.com/fpffCKW.jpg"  /></a>
-                    <header>
-                      <h3>Baked</h3>
-                    </header>
-                  </article>
-                </div>
+				                <div class="4u 12u$(mobile)">
+				                  	<article class="item">
+				                    	<a href="https://bakedjes.herokuapp.com/" class="image fit"><img src="images/baked.jpg"  /></a>
+				                    	<header>
+				                      		<h3>Baked</h3>
+				                    	</header>
+				                 	 </article>
+				                </div>
 
-                <div class="4u 12u$(mobile)">
-                  <article class="item">
-                    <a href="https://jeska706.github.io/" class="image fit"><img src="https://i.imgur.com/vM0W1aw.jpg" /></a>
-                    <header>
-                      <h3>Connect Four</h3>
-                    </header>
-                  </article>
-                </div>
-              </div>
-
+				                <div class="4u 12u$(mobile)">
+				                  	<article class="item">
+				                    	<a href="https://jeska706.github.io/" class="image fit"><img src="images/connectfour.jpg" /></a>
+				                    	<header>
+				                     		<h3>Connect Four</h3>
+				                    	</header>
+				                 	</article>
+				                </div>
+				            </div>
+							<p>More to come...</p>
 
 						</div>
 					</section>
 
 				<!-- About Me -->
 					<section id="about" class="three">
-						<div class="container">
+						<div class="">
 
 							<header>
 								<h2>About Me</h2>
@@ -154,12 +148,7 @@
 
 							<img src="images/about.jpg" />
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>Born and raised on the East Coast and now living in beautiful Bozeman, MT with my finacé/partner in crime. I love life and adventure and I'm enjoying ever moment that my new region has to offer. When I'm not ticking away behind a computer I can be found experimenting in the kitchen, wood carving, scultping or just enjoying the amazing scenery</p>
 
 						</div>
 					</section>
