finished setting up info

--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
 
 							<img src="images/about.jpg" />
 
-							<p>Born and raised on the East Coast and now living in beautiful Bozeman, MT with my finacé/partner in crime. I love life and adventure and I'm enjoying ever moment that my new region has to offer. When I'm not ticking away behind a computer I can be found experimenting in the kitchen, wood carving, scultping or just enjoying the amazing scenery</p>
+							<p>Born and raised on the East Coast and now living in beautiful Bozeman, MT with my finacé/partner in crime. I love life and adventure and I'm enjoying ever moment that my new region has to offer. When I'm not ticking away behind a computer I can be found experimenting in the kitchen, wood carving, scultping or just enjoying the amazing scenery.</p>
 
 						</div>
 					</section>
