changed project out

--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,15 @@
 
 
 			              	<div class="row">
+								<div class="4u 12u$(mobile)">
+				                  	<article class="item">
+				                    	<a href="https://caking.herokuapp.com/" class="image fit"><img src="images/caking.jpg" /></a>
+				                    	<header>
+				                     		<h3>Connect Four</h3>
+				                    	</header>
+				                 	</article>
+				                </div>
+
 				                <div class="4u 12u$(mobile)">
 					                  <article class="item">
 						                    <a href="https://etrendy-app.herokuapp.com/" class="image fit"><img src="images/etrendy.jpg" /></a>
@@ -123,18 +132,7 @@
 				                    	</header>
 				                 	 </article>
 				                </div>
-
-				                <div class="4u 12u$(mobile)">
-				                  	<article class="item">
-				                    	<a href="https://jeska706.github.io/" class="image fit"><img src="images/connectfour.jpg" /></a>
-				                    	<header>
-				                     		<h3>Connect Four</h3>
-				                    	</header>
-				                 	</article>
-				                </div>
 				            </div>
-							<p>More to come...</p>
-
 						</div>
 					</section>
 
