--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
       <body>
         <h1 id="jessica-beardsley">Jessica Beardsley</h1>
 <p><img src="https://cloud.githubusercontent.com/assets/22794560/23007950/4d687908-f3c9-11e6-8173-872b1837dc32.jpg" alt="portfolio"></p>
-<p>##Live repos:
+<p>##Live repo
 <a href="https://jessicabeardsley.herokuapp.com/#top">Heroku</a></p>
 
       </body>
