--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 				                  	<article class="item">
 				                    	<a href="https://caking.herokuapp.com/" class="image fit"><img src="images/caking.jpg" /></a>
 				                    	<header>
-				                     		<h3>Connect Four</h3>
+				                     		<h3>Caking</h3>
 				                    	</header>
 				                 	</article>
 				                </div>
