--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
 								<li><a href="https://github.com/jeska706"><span class="fa fa-github-alt"></span>Github: /jeska706</a></li>
 								<li><span class= "fa fa-envelope"></span>Email: www.jessicabeardsley.com</a></li>
 								<li><span class="fa fa-mobile"></span>Cell: (301)928.5934</li>
-								<li><a href="https://www.jessicabeardsley.com"><span class="fa fa-birthday-cake"></span>Pastry Portfolio</a></li>
+								<li><a href="http://www.jessicabeardsley.com"><span class="fa fa-birthday-cake"></span>Pastry Portfolio</a></li>
 							</ul>
 
 						</div>
